tests/machine/x/kt/pure_global_fold.kt
fun inc(x: Int): Int {
	return (x + k)
}

fun main() {
	val k = 2
	println(inc(3))
}
